# labelstudio-tools

./: .gitignore  .template.env  README.md  format.sh  main.py  prepare.sh  pyproject.toml  readme.md  server.py  start_server.sh
data/: log_conf.json
data/configs/step1/: config_template.xml  reduced.xml  reduced_man.xml  reduced_template_backup.xml  test.xml  twitter.xml  twitter_user.xml  youtube.xml  youtube_elements.xml
data/ls_data/: projects-all.json  projects.json
data/server_static/: index.html  video.html
exp/coding_preps/: add_more_afterwards.py  build_configs.py  helper.py  parse_fulvias_excel.py  task_number_estimation.py
ls_helper/: agreements.py  agreements_calculation.py  agreements_test.py  ana_res.py  annot_extension.py  annotation_timing.py  annotations.py  anot_master2.py  build_configs.py  calc_agreement.py  command_labeling_conf.py  config_helper.py  data_reshape.py  depr.py  fresh_agreements.py  funcs.py  main.py  main_funcs.py  models.py  new_models.py  project_creator.py  project_mgmt.py  settings.py  tasks.py
ls_helper/command/: aggregate.py  annotations.py  backup.py  extra.py  labeling_conf.py  pipeline.py  plot.py  project.py  project_setup.py  setup.py  task.py  view.py
ls_helper/exp/: agreements.ipynb  build_configs.py  configs.py  food_and_health.py  metcls.py  project_setup.py  project_setup_youtube_6.py
ls_helper/models/: depr.py  field_models.py  interface_models.py  main_models.py  result_models.py  variable_models.py
ls_helper/my_labelstudio_client/: annot_master.py  client.py  models.py
test/: test_init.py
(+51 files in other folders)
